// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Leaderboard > renders heading and empty scores message when no data after loading 1`] = `
<div>
  <div
    class="sc-guDLey gwwqSR"
  >
    <h2
      class="sc-dmyCSP dRcuXB"
    >
      Leaderboard
    </h2>
    <p
      class="sc-beySPh NxqXj"
    >
      No scores recorded.
    </p>
  </div>
</div>
`;

exports[`Leaderboard > renders heading and list on valid leaderboard data 1`] = `
<div>
  <div
    class="sc-guDLey gwwqSR"
  >
    <h2
      class="sc-dmyCSP dRcuXB"
    >
      Leaderboard
    </h2>
    <ul
      class="sc-hLQSwg bFhvaQ"
    >
      <li
        class="sc-eDLKkx bmiIbR"
      >
        <span
          class="sc-jTQCzO bXZCUx"
        >
          Anon
        </span>
        <span
          class="sc-gLLuof jXpbup"
        >
          32
        </span>
      </li>
      <li
        class="sc-eDLKkx bmiIbR"
      >
        <span
          class="sc-jTQCzO bXZCUx"
        >
          Big Gary
        </span>
        <span
          class="sc-gLLuof jXpbup"
        >
          100
        </span>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Leaderboard > renders heading and loading message when loading data 1`] = `
<div>
  <div
    class="sc-guDLey gwwqSR"
  >
    <h2
      class="sc-dmyCSP dRcuXB"
    >
      Leaderboard
    </h2>
    <p
      class="sc-beySPh NxqXj"
    >
      Loading...
    </p>
  </div>
</div>
`;
